--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
@@ -162,104 +162,134 @@
 
 
 <table class="table table-bordered" style="width:100%">
+	<tr>
+		<th style="text-align:center" rowspan="2">Year</th>
+	<th style="text-align:center" colspan="4">Your contributions</th>
+		<th style="text-align:center" colspan="3">Your pensionable earnings</th>
+	</tr>
   <tr>
-    <th style="text-align:center">Year</th>
-    <th style="text-align:center">Your contributions</th>
-    <th style="text-align:center">Your pensionable earnings</th>
-    <th style="text-align:center">Notes</th>
+    
+    <th style="text-align:center">Base portion</th>
+    <th style="text-align:center">First additional portion</th>
+    <th style="text-align:center">Second additional portion</th>
+	  <th style="text-align:center">Total</th>
+    <th style="text-align:center">Base portion</th>
+    <th style="text-align:center">First additional portion</th>
+	  <th style="text-align:center">Second additional portion</th>
   </tr>
   <tr>
-    <th style="text-align:center">2000</th>
-    <td style="text-align:center">$1,045.44</td>
-    <td style="text-align:center">$30,306.00</td>
-    <td style="text-align:center">CS</td>
+    <th style="text-align:center">2016</th>
+    <td style="text-align:center">21.76 $</td>
+    <td style="text-align:center">&nbsp;</td>
+    <td style="text-align:center">&nbsp;</td>
+	   <td style="text-align:center">0.00 $</td>
+    <td style="text-align:center">0.00 $  B</td>
+    <td style="text-align:center">&nbsp;</td>
+    <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2001</th>
-    <td style="text-align:center">$1,496.40</td>
-    <td style="text-align:center">$38,300.00</td>
-    <td style="text-align:center">S, M</td>
+    <th style="text-align:center">2017</th>
+    <td style="text-align:center">2,200.00 $</td>
+    <td style="text-align:center">&nbsp;</td>
+    <td style="text-align:center">&nbsp;</td>
+	   <td style="text-align:center">2,200.00 $</td>
+    <td style="text-align:center">50,100.00 $  S</td>
+    <td style="text-align:center">&nbsp;</td>
+    <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2002</th>
-    <td style="text-align:center">$1,444.17</td>
-    <td style="text-align:center">$38,100.00</td>
-    <td style="text-align:center">M</td>
+    <th style="text-align:center">2018</th>
+    <td style="text-align:center">2,549.25 $</td>
+    <td style="text-align:center">&nbsp;</td>
+    <td style="text-align:center">&nbsp;</td>
+	   <td style="text-align:center">2,549.25 $</td>
+    <td style="text-align:center">55,000.00 $</td>
+    <td style="text-align:center">&nbsp;</td>
+    <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2003</th>
-    <td style="text-align:center">$1,309.80</td>
-    <td style="text-align:center">$29,960.00</td>
-    <td style="text-align:center">M</td>
+    <th style="text-align:center">2019</th>
+    <td style="text-align:center">2,781.90 $</td>
+    <td style="text-align:center">84.30 $</td>
+    <td style="text-align:center">&nbsp;</td>
+	   <td style="text-align:center">2,866.20 $</td>
+    <td style="text-align:center">59,700.00 $  M</td>
+    <td style="text-align:center">59,700.00 $  M</td>
+    <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2004</th>
-    <td style="text-align:center">$1,831.50</td>
-    <td style="text-align:center">$40,500.00</td>
-    <td style="text-align:center">B</td>
+    <th style="text-align:center">2020</th>
+    <td style="text-align:center">2,871.00 $</td>
+    <td style="text-align:center">174.00 $</td>
+    <td style="text-align:center">&nbsp;</td>
+	   <td style="text-align:center">3,045.00 $</td>
+    <td style="text-align:center">61,500.00 $  M</td>
+    <td style="text-align:center">61,500.00 $  M</td>
+    <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2005</th>
-    <td style="text-align:center">$1,861.20</td>
-    <td style="text-align:center">$41,100.00</td>
-    <td style="text-align:center">B, M</td>
+    <th style="text-align:center">2021</th>
+    <td style="text-align:center">2,979.90 $</td>
+    <td style="text-align:center">301.00 $</td>
+    <td style="text-align:center">&nbsp;</td>
+	   <td style="text-align:center">3,280.90 $</td>
+    <td style="text-align:center">63,700.00 $  M</td>
+    <td style="text-align:center">63,700.00 $  M</td>
+    <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2006</th>
-    <td style="text-align:center">$1,910.70</td>
-    <td style="text-align:center">$42,100.00</td>
-    <td style="text-align:center">M</td>
+    <th style="text-align:center">2022</th>
+    <td style="text-align:center">3,073.95 $</td>
+    <td style="text-align:center">465.75 $</td>
+    <td style="text-align:center">&nbsp;</td>
+	  <td style="text-align:center">3,539.70 $</td>
+    <td style="text-align:center">65,600.00 $  M</td>
+    <td style="text-align:center">65,600.00 $  M</td>
+    <td style="text-align:center">&nbsp;</td>
   </tr>
    <tr>
-    <th style="text-align:center">2007</th>
-    <td style="text-align:center">$1,861.20</td>
-    <td style="text-align:center">$41,100.00</td>
-    <td style="text-align:center">S, M</td>
+    <th style="text-align:center">2023</th>
+    <td style="text-align:center">3,237.30 $</td>
+    <td style="text-align:center">654.00 $</td>
+    <td style="text-align:center">&nbsp;</td>
+	    <td style="text-align:center">3,891.30 $</td>
+    <td style="text-align:center">68,900.00 $  M</td>
+    <td style="text-align:center">68,900.00 $  M</td>
+    <td style="text-align:center">&nbsp;</td>
   </tr>
    <tr>
-    <th style="text-align:center">2008</th>
-    <td style="text-align:center">$1,309.80</td>
-    <td style="text-align:center">$29,960.00</td>
-    <td style="text-align:center">S</td>
+    <th style="text-align:center">2024</th>
+    <td style="text-align:center">3,415.50 $</td>
+    <td style="text-align:center">690.00 $</td>
+    <td style="text-align:center">203.00 $</td>
+	   <td style="text-align:center">4,308.50 $</td>
+    <td style="text-align:center">72,500.00 $  M</td>
+    <td style="text-align:center">72,500.00 $  M</td>
+    <td style="text-align:center">5,075.00 $  M</td>
   </tr>
    <tr>
-    <th style="text-align:center">2009</th>
-    <td style="text-align:center">$1,496.40</td>
-    <td style="text-align:center">$38,300.00</td>
-    <td style="text-align:center">S</td>
+    <th style="text-align:center">2025</th>
+    <td style="text-align:center">3,445.20 $</td>
+    <td style="text-align:center">696.00 $</td>
+    <td style="text-align:center">406.00 $</td>
+	    <td style="text-align:center">4,547.20 $</td>
+    <td style="text-align:center">73,100.00 $  M</td>
+    <td style="text-align:center">73,100.00 $  M</td>
+    <td style="text-align:center">10,150.00 $  M</td>
   </tr>
   <tr>
-    <th style="text-align:center">2010</th>
-    <td style="text-align:center">$1,861.20</td>
-    <td style="text-align:center">$41,100.00</td>
-    <td style="text-align:center">S, M</td>
+    <th style="text-align:center">2026</th>
+    <td style="text-align:center">3,479.85 $</td>
+    <td style="text-align:center">703.00 $</td>
+    <td style="text-align:center">240.00 $</td>
+	   <td style="text-align:center">4,422.85 $</td>
+    <td style="text-align:center">73,800.00 $  M</td>
+    <td style="text-align:center">73,800.00 $  M</td>
+    <td style="text-align:center">6,000.00 $</td>
   </tr>
-  <tr>
-    <th style="text-align:center">2011</th>
-    <td style="text-align:center">$1,496.40</td>
-    <td style="text-align:center">$42,100.00</td>
-    <td style="text-align:center">B</td>
-  </tr>
-  <tr>
-    <th style="text-align:center">2012</th>
-    <td style="text-align:center">$1,861.20</td>
-    <td style="text-align:center">$42,100.00</td>
-    <td style="text-align:center">M</td>
-  </tr>
-  <tr>
-    <th style="text-align:center">2013</th>
-    <td style="text-align:center">$1,910.70</td>
-    <td style="text-align:center">$42,100.00</td>
-    <td style="text-align:center">M</td>
-  </tr>
-  <tr>
-    <th style="text-align:center">2013</th>
-    <td style="text-align:center">$295.87</td>
-    <td style="text-align:center">$42,100.00</td>
-    <td style="text-align:center">P</td>
-  </tr>
-  <tr><td colspan="4"><strong>Legend for Notes:</strong><br>
-B – Below basic exemption  |  M – Maximum  |  P – Post-Retirement benefit |  S – Self-Employed earnings  |  CS – Credit Split
+ 
+  <tr><td colspan="8"><strong>Legend for Notes:</strong><br>
+<strong>B</strong> – Below basic exemption amount for the year  |  <strong>M</strong> – Maximum pensionable earnings for the year  |  <strong>P</strong> – Post-retirement benefit |  <strong>S</strong> – Self-employed earnings  |  <strong>CS</strong> – Credit Split
 </td></tr>
 </table>
 </div>
