--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status-fr.html
@@ -295,7 +295,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 </ul><br>	
 	
 
-  <p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">Retour au menu principal de l'assurance-emploi
+  <p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au Régime de pensions du Canada / Sécurité de la vieillesse
 </a></p><br><br>
 	
 </section>
