--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement-fr.html
@@ -364,7 +364,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 </section>	
 	 <button type="button" class="btn btn-primary">Continuer</button>
 	<button type="button" class="btn btn-default">Annuler</button><br><br>
-	<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au menu principal de l'assurance-emploi
+	<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au Régime de pensions du Canada / Sécurité de la vieillesse
 </a><br><br>
 	
 	</section>
