--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-disability-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-disability-fr.html
@@ -255,7 +255,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 	<button type="button" class="btn btn-default">Récupérer la demande en cours</button>
 	<button type="button" class="btn btn-default">Remplir une nouvelle demande</button>
 	
-	<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au menu principal de l'assurance-emploi
+	<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au Régime de pensions du Canada / Sécurité de la vieillesse
 </a></p><br><br>
 	
 	</section>
