--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/OAS-GIS-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/OAS-GIS-fr.html
@@ -477,7 +477,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
 <button type="button" class="btn btn-Primary">Continuer</button> <button type="button" class="btn btn-default">Annuler</button>
   
-		<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au menu principal de l'assurance-emploi</a></p>
+		<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au Régime de pensions du Canada / Sécurité de la vieillesse</a></p>
 	
 </section>
 </aside>
