--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info-fr.html
@@ -306,7 +306,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <a class="btn btn-primary" style="margin-left:0px; margin-top:10px; margin-bottom:10px; margin-right:10px;" href="###">Continue</a>
 <a class="btn btn-default" style="margin-left:0px; margin-top:10px; margin-bottom:10px; margin-right:10px;" href="###">Cancel</a><br>-->
 
-<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au menu principal de l'assurance-emploi
+<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au Régime de pensions du Canada / Sécurité de la vieillesse
 </a></p><br><br>
 	
 	
