--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Delay-Receiving-OAS-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Delay-Receiving-OAS-fr.html
@@ -272,7 +272,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <button type="button" class="btn btn-default">Réinitialiser</button>
 <button type="button" class="btn btn-default">Annuler</button>
 	
-<br><br><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au menu principal de l'assurance-emploi
+<br><br><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au Régime de pensions du Canada / Sécurité de la vieillesse
 </a>	<br><br>
 
   
