--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision-fr.html
@@ -293,7 +293,7 @@ Votre dossier montre que vous ne bénéficiez pas de la clause pour élever des 
   <a class="btn btn-default" style="margin:10px;" href="###">Annuler</a><br><br>
   
 
-<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au menu principal de l'assurance-emploi
+<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au Régime de pensions du Canada / Sécurité de la vieillesse
 </a></p><br><br>
 	
 	
