--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/estimated-monthly-cpp-benefits-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/estimated-monthly-cpp-benefits-fr.html
@@ -299,7 +299,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   
 
 	<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">
-Retour à la page d'accueil de Mon dossier Service Canada</a></p>
+Retour au Régime de pensions du Canada / Sécurité de la vieillesse</a></p>
 
 
 
