--- a/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate-fr.html
@@ -359,7 +359,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 					<a class="btn btn-default" href="###">Ajouter</a>
 				</div>
 				
-				<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Mère du conjoint(e)</a></p>
+				<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au Régime de pensions du Canada / Sécurité de la vieillesse</a></p>
 			
 		</div>
 </div>
