--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -279,7 +279,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="">Calculatrice du revenu de retraite canadienne</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Index du RPC</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Index de la SV</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
-          <li class="list-group-item"><a href="">Contactez-nous</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="/MSCA-Prototype/scenarioA/services/my-account/cpp-contact-fr.html">Contactez-nous</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
         </ul>
       </div>
     </div>
