--- a/scenarioA/services/my-account/sign-in-partner/register.html
+++ b/scenarioA/services/my-account/sign-in-partner/register.html
@@ -236,18 +236,18 @@ My Service Canada Account: Register with your bank</h1>
 	<ol class="row list-unstyled hidden-xs">
 		<li class="col-md-3"><a href="#determine-partner"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/bank-sign-in.png" class="center-block" alt=""><br>Determine if your bank is a Sign-in Partner</a></li>
 
-		<li class="col-md-3"><a href="#receive-code"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/request-code.png" class="center-block" alt=""><br>Request access code</a></li>
+		<li class="col-md-3"><a href="#request-code"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/request-code.png" class="center-block" alt=""><br>Request access code</a></li>
 
-		<li class="col-md-3"><a href="#sign-up-gckey"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/mail-arrival.png" class="center-block" alt=""><br>Receive access code</a></li>
+		<li class="col-md-3"><a href="#receive-code"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/mail-arrival.png" class="center-block" alt=""><br>Receive access code</a></li>
 
-		<li class="col-md-3"><a href="#register-msca"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/review.png" class="center-block" alt=""><br>Register for MSCA with Sign-in Partner</a></li>
+		<li class="col-md-3"><a href="#sign-up-gckey"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/review.png" class="center-block" alt=""><br>Register for MSCA with Sign-in Partner</a></li>
 	 </ol>
 	
 	<ol class="visible-xs">
 		<li><a href="#determine-partner">Determine if your bank is a Sign-in Partner</a></li>
-		<li><a href="#receive-code">Request access code</a></li>
-		<li><a href="#sign-up-gckey">Receive access code</a></li>
-		<li><a href="#register-msca">Register for MSCA with Sign-in Partner</a></li>
+		<li><a href="#request-code">Request access code</a></li>
+		<li><a href="#receive-code">Receive access code</a></li>
+		<li><a href="#sign-up-gckey">Register for MSCA with Sign-in Partner</a></li>
 	 </ol>
 </div>
 
