--- a/scenarioA/services/my-account/sign-in-partner/register-fr.html
+++ b/scenarioA/services/my-account/sign-in-partner/register-fr.html
@@ -235,18 +235,18 @@ Mon dossier Service&nbsp;Canada&nbsp;: Inscription avec votre banque</h1>
 	<ol class="row list-unstyled hidden-xs">
 		<li class="col-md-3"><a href="#determine-partner"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/bank-sign-in.png" class="center-block" alt=""><br>Vérifier si votre banque est un partenaire de connexion</a></li>
 
-		<li class="col-md-3"><a href="#receive-code"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/request-code.png" class="center-block" alt=""><br>Demander un code d’accès</a></li>
+		<li class="col-md-3"><a href="#request-code"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/request-code.png" class="center-block" alt=""><br>Demander un code d’accès</a></li>
 
-		<li class="col-md-3"><a href="#sign-up-gckey"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/mail-arrival.png" class="center-block" alt=""><br>Recevoir un code d’accès</a></li>
+		<li class="col-md-3"><a href="#receive-code"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/mail-arrival.png" class="center-block" alt=""><br>Recevoir un code d’accès</a></li>
 
-		<li class="col-md-3"><a href="#register-msca"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/review.png" class="center-block" alt=""><br>S’inscrire à MDSC avec un partenaire de connexion</a></li>
+		<li class="col-md-3"><a href="#sign-up-gckey"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/review.png" class="center-block" alt=""><br>S’inscrire à MDSC avec un partenaire de connexion</a></li>
 	 </ol>
 	
 	<ol class="visible-xs">
 		<li><a href="#determine-partner">Vérifier si votre banque est un partenaire de connexion</a></li>
-		<li><a href="#receive-code">Demander un code d’accès</a></li>
-		<li><a href="#sign-up-gckey">Recevoir un code d’accès</a></li>
-		<li><a href="#register-msca">S’inscrire à MDSC avec un partenaire de connexion</a></li>
+		<li><a href="#request-code">Demander un code d’accès</a></li>
+		<li><a href="#receive-code">Recevoir un code d’accès</a></li>
+		<li><a href="#sign-up-gckey">S’inscrire à MDSC avec un partenaire de connexion</a></li>
 	 </ol>
 </div>
 
