--- a/scenarioA/services/my-account/GCKey/sign-up-complete.html
+++ b/scenarioA/services/my-account/GCKey/sign-up-complete.html
@@ -102,7 +102,7 @@
           <div class="col-md-8">
             <p class="visible-xs visible-sm">Please keep your Username secure. For more information on how your privacy is protected, please refer to our <a href="PS-01?ReqID=S238C0A6D574BE970FC6B67F28AA00CB6C759F2F44" target="_blank" title="Personal Information Collection Statement (opens in a new window)">Personal Information Collection Statement</a>.</p>
             <p>You have successfully created your GCKey.</p>
-            <p>Your Username is: MBrown123</p>
+            <p>Your Username is: RSmith123</p>
             <p style="margin-bottom: 20px;"> Please select <strong>Continue</strong> to leave the GCKey service and return to the Government of Canada online service. </p>
             <form id="form" autocomplete="off" method="post" action="https://clegc-gckey.gc.ca/j/eng/rg?execution=e2s5" onsubmit="return disableButton()">
               <p style="text-align: center"> <a class="btn btn-primary" title="Continue the process" name="_eventId_continue" id="continue" href="/MSCA-Prototype/scenarioA/services/my-account/R&A/privacy-notice-terms-and-conditions.html">Continue</a> </p>
