--- a/scenarioA/services/my-account/GCKey/sign-up-complete-fr.html
+++ b/scenarioA/services/my-account/GCKey/sign-up-complete-fr.html
@@ -102,7 +102,7 @@
      <div class="col-md-8">
       <p class="visible-xs visible-sm">Veuillez assurer la confidentialit&eacute; de votre nom d'utilisateur. Pour obtenir plus de renseignements sur la fa&ccedil;on dont la protection de vos renseignements personnels est assur&eacute;e, veuillez consulter notre <a href="#">D&eacute;claration sur la collecte des renseignements personnels</a>.</p>
       <p>Vous avez cr&eacute;&eacute; votre cl&eacute;GC avec succ&egrave;s.</p>
-      <p>Votre nom d'utilisateur est: MBrown123</p>
+      <p>Votre nom d'utilisateur est: RSmith123</p>
       <p style="margin-bottom: 20px;">
        Veuillez s&eacute;lectionner <strong>Continuer</strong> pour quitter le service Cl&eacute;GC et retourner au minist&egrave;re.
       </p>
