--- a/scenarioA/services/my-account/pac/confirm-pac.html
+++ b/scenarioA/services/my-account/pac/confirm-pac.html
@@ -159,13 +159,13 @@
 
 <dl>
 <dt>Social Insurance Number</dt>
-<dd>888888880</dd>
+<dd>046 454 268</dd>
 <dt>First name</dt>
-<dd>Mary</dd>
+<dd>Riley</dd>
 <dt>Last Name</dt>
-<dd>Brown</dd>
+<dd>Smith</dd>
 <dt>Date of Birth (Ex:1947/May/14)</dt>
-<dd>1999-01-01</dd>
+<dd>1965-01-01</dd>
 							<dt>Parent's Family Name at Birth</dt>
 			<dd>Smith</dd>
 </dl>
