--- a/scenarioA/services/my-account/pac/confirm-pac-fr.html
+++ b/scenarioA/services/my-account/pac/confirm-pac-fr.html
@@ -215,7 +215,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
                     <!-- the main content -->
                     
      
-    <h1 id="wb-cont" property="name">
+    <h1 property="name" id="wb-cont">
         Confirmer mon profil
         </h1>
 
@@ -240,13 +240,13 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 
 <dl>
 <dt>Numéro   d'assurance sociale </dt>
-<dd>888888880</dd>
+<dd>046 454 268</dd>
 <dt>Prénom </dt>
-<dd>Mary</dd>
+<dd>Riley</dd>
 <dt>Nom de   famille </dt>
-<dd>Brown</dd>
+<dd>Smith</dd>
 <dt>Date de   naissance (p. ex., 1947 mai 14) </dt>
-<dd>1999-01-01</dd>
+<dd>1965-01-01</dd>
 							<dt>Nom de famille   du parent à la naissance </dt>
 			<dd>Smith</dd>
 </dl>
