--- a/scenarioA/services/my-account/R&A/confirm-my-profile.html
+++ b/scenarioA/services/my-account/R&A/confirm-my-profile.html
@@ -156,7 +156,7 @@
             
 							<p>Please take a moment to review your profile. If you are satisfied with the information provided, please Continue.</p>
 
-            <h2 class="page-header">Informations de l'utilisateur</h2>
+            <h2 class="page-header">User information</h2>
 <dl>
 <dt>Date of birth:</dt>
 <dd>1965-01-01</dd>
