--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -13,7 +13,7 @@
 <title>My Service Canada Account</title>
 <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script> 
 <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script>
-<link href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/static-content/msca-mdsc/css/msca-cdtn.css" rel="stylesheet"/>
+
 <noscript>
 <!--[if gte IE 9 | !IE ]><!-->
 <link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/assets/favicon.ico" rel="icon" type="image/x-icon"/>
@@ -161,7 +161,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <section id="wb-lng" class="text-right col-xs-3 col-sm-4 col-md-6">
           <h2 class="wb-inv">Language selection</h2>
           <ul class="list-inline margin-bottom-none">
-            <li><a lang="fr" href="###">Français</a></li>
+            <li><a lang="fr" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax-fr.html">Français</a></li>
           </ul>
         </section>
       </div>
@@ -249,14 +249,18 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       </div>
     </div>
   </div>
-  <!--<br />
-	<section class="alert alert-info">
-  <h2 class="h3">Tax slips</h2>
+  <br />
+		<section class="alert alert-info">
 
-<p>T4E, T4A and NR4 tax slips for 2019 are now available <strong>online</strong> under the Tax information section of Employment  Insurance (EI) and Canada Pension Plan (CPP) / Old Age Security (OAS). <strong>Paper tax slips</strong> were mailed before the <strong>end of February</strong>.</p>
-		<h3 class="h4">Verify your address</h3>
-  <p>Please check that your mailing address is correct in My  Service Canada Account (MSCA)  under the View/Change section of EI and CPP / OAS.&nbsp;</p>
-</section>-->
+		<h2 class="h3">Notice</h2>
+  <p>Based on user feedback and testing, Service Canada has designed a new and exciting look to My Service Canada Account to improve your experience with your Canada Pension Plan, Old Age Security, and Employment Insurance.</p>
+</section>
+	
+	<section class="alert alert-info">
+
+		<h2 class="h3">Verify your address</h2>
+  <p>Please check that your mailing address is correct in My  Service Canada Account (MSCA)  under the View/Change my Personal Information section of EI and CPP / OAS.&nbsp;</p>
+</section>
 
   <section>
     <div class="mrgn-tp-lg header-bg">
@@ -264,16 +268,22 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="brdr-bttm-fade"></div>
     </div>
 	  <br />
-    <div> <a class="col-xs-12 col-md-5 brdr-lft brdr-rght brdr-tp brdr-bttm btn" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">
+    <div class="row mrgn-tp-md">
+    <div class="col-xs-12 col-md-6 mrgn-bttm-md"> 
+		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
       <div class="h3 mrgn-tp-md text-center">Employment Insurance</div>
       </a> </div>
-    <div> <a class="col-xs-12 col-md-5 col-md-offset-1 brdr-lft brdr-rght brdr-tp brdr-bttm btn" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">
+	  
+    <div class="col-xs-12 col-md-6"> 
+		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
       <div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
       </a> </div>
+      
+  </div> 
   </section>
 	
   <div class="row">
-  <aside style="padding-top:90px; padding-left:10px;">
+  <aside style="padding-left:10px;">
   <div class="mrgn-tp-lg header-bg">
     <h2>Other services</h2>
     <div class="brdr-bttm-fade"></div>
@@ -285,12 +295,12 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <h2 class="h3 mrgn-tp-0">Canada Revenue Agency</h2>-->
        <p>You can now switch to your Canada Revenue Agency (CRA) account without having to log in again to view and manage your:
 			<ul>
-				<li>tax returns;</li>
-				<li>tax credits;</li>
-				<li>account balance;</li>
-				<li>Registered Retirement Savings Plan (RRSP);</li>
-				<li>Tax Free Savings Account (TFSA); and</li>
-				<li>Canada Child Benefits.</li>
+				<li>tax returns</li>
+				<li>tax credits</li>
+				<li>account balance</li>
+				<li>Registered Retirement Savings Plan (RRSP)</li>
+				<li>Tax Free Savings Account (TFSA)</li>
+				<li>Canada Child Benefits</li>
 		  </ul>
 	  
         <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Access CRA</a> 
