--- a/scenarioA/services/my-account/GCKey/sign-in.html
+++ b/scenarioA/services/my-account/GCKey/sign-in.html
@@ -140,19 +140,16 @@
                     </form>
                   </div>
                 </div>
-                <div class="wb-sec col-md-4 hidden-xs hidden-sm">
-                  <div class="col-xs-12">
-                    <h2 style="margin-top: 0;">Simple Secure Access</h2>
-                    <p>A simple way to securely access Government of Canada online services.
-                    <p>
-                    <ul style="padding-left: 0px">
-                      <li style="list-style: none">One username.</li>
-                      <li style="list-style: none">One password.</li>
-                    </ul>
-                    <p style="text-align:center; margin-top: 20px; margin-bottom: 20px;"><a href="/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-up-step-1.html" class="btn btn-primary" style="width: 13em;" title="Sign Up / Register for a new GCKey">Sign Up</a></p>
-                    <p>Your GCKey can be used to access multiple Government of Canada online <a href="ES-01?ReqID=S286A1F6398A48F86EF30A053D2FD72EB181C5721F" target="_blank" title="Enabled Services (opens in a new window)">Enabled Services</a>.</p>
-                  </div>
-                </div>
+                <div class="col-xs-12 wb-sec col-md-4 hidden-xs hidden-sm">
+          <h2 style="margin-top: 0;">Simple Secure Access</h2>
+          <p>A simple way to securely access Government of Canada online services.<p>
+          <ul style="padding-left: 0px"><li style="list-style: none">One username.</li><li style="list-style: none">One password.</li></ul>
+		   </div>
+          <p style="text-align:center; margin-top: 20px; margin-bottom: 20px;"><a href="/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-up-step-1.html" class="btn btn-primary" style="width: 13em;" title="Sign Up / Register for a new GCKey">Sign Up</a></p>
+		   <div class="col-xs-12 wb-sec col-md-4 hidden-xs hidden-sm">
+          <p>Your GCKey can be used to access multiple Government of Canada online <a href="###" target="_blank" title="Enabled Services (opens in a new window)">Enabled Services</a>.</p>
+        
+        </div>
               </div>
             </div>
           </div>
