--- a/scenarioA/services/my-account/GCKey/sign-in-fr.html
+++ b/scenarioA/services/my-account/GCKey/sign-in-fr.html
@@ -139,8 +139,7 @@
                     </form>
                   </div>
                 </div>
-                <div class="wb-sec col-md-4 hidden-xs hidden-sm">
-                  <div class="col-xs-12">
+                <div class="col-xs-12 wb-sec col-md-4 hidden-xs hidden-sm">
                     <h2 style="margin-top: 0;">Accès sécurisé et simple</h2>
                     <p>Une fa&ccedil;on simple d'acc&eacute;der aux services en ligne du gouvernement du Canada.
                     <p>
@@ -149,10 +148,10 @@
                       <li style="list-style: none">Un nom d'utilisateur.</li>
                       <li style="list-style: none">Un mot de passe.</li>
                       <li style="list-style: none"></li>
-                    </ul>
-                    <p style="text-align:center; margin-top: 20px; margin-bottom: 20px;"><a href="/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-up-step-1-fr.html" class="btn btn-primary" style="width: 13em;" title="Sign Up / Register for a new GCKey">S'enregistrer</a></p>
+					</ul></div>
+                    <p style="text-align:center; margin-top: 20px; margin-bottom: 20px;"><a href="/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-up-step-1-fr.html" class="btn btn-primary" style="width: 13em;" title="Sign Up / Register for a new GCKey">S'enregistrer</a></p><div class="col-xs-12 wb-sec col-md-4 hidden-xs hidden-sm">
                     <p>Votre cl&eacute;GC peut &ecirc;tre utilis&eacute;e pour acc&eacute;der &agrave; plusieurs <a href="#" target="_blank" title="Services adapt&eacute;s (s'ouvre dans une nouvelle fen&ecirc;tre)">services adapt&eacute;s</a> en ligne du gouvernement du Canada.</p>
-                  </div>
+             
                 </div>
               </div>
             </div>
