--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -253,10 +253,10 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <ul class="list-group">
           <li class="list-group-item"><a href="#a1-1">Demandes de prestations du RPC </a></li>
           <li class="list-group-item"><a href="#a1-2">Demandes de la SV/SRG </a></li>
-           <li class="list-group-item"><a href="#a1-6">Clause d’exclusion pour élever des enfants </a></li>
+           <li class="list-group-item"><a href="#a1-6">Clause pour élever des enfants </a></li>
 			<li class="list-group-item"><a href="#a1-7">Renseignements fiscaux</a></li>
 			<li class="list-group-item"><a href="#a1-3">Visualiser/modifier mes renseignements personnels</a></li>
-          <li class="list-group-item"><a href="#a1-4">Versements</a></li>
+          <li class="list-group-item"><a href="#a1-4">Paiement</a></li>
 			<li class="list-group-item"><a href="#a1-5">Cotisations</a></li>
           <li class="list-group-item"><a href="#a1-8">Consentement </a></li>
         </ul>
@@ -318,11 +318,11 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		<div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
-            <h2 id="a1-6" class="mrgn-tp-0">Clause d’exclusion pour élever des enfants&nbsp;</h2>
+            <h2 id="a1-6" class="mrgn-tp-0">Clause pour élever des enfants&nbsp;</h2>
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
-          <p>Si vous vous êtes absenté du travail ou avez moins travaillé pour vous  occuper de vos jeunes enfants, vous pourriez être en mesure de faire augmenter  le montant de votre pension du RPC et d&rsquo;autres prestations du RPC grâce à la  clause d&rsquo;exclusion pour élever des enfants.</p>
+          <p>Si vous vous êtes absenté du travail ou avez moins travaillé pour vous  occuper de vos jeunes enfants, vous pourriez être en mesure de faire augmenter  le montant de votre pension du RPC et d&rsquo;autres prestations du RPC grâce à la  clause pour élever des enfants.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision-fr.html';" type="button" class="btn btn-default">Demander ma clause pour élever des enfants</button></li>
           <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info-fr.html';" type="button" class="btn btn-default">Ma clause pour élever des enfants</button></li>
@@ -336,7 +336,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
-          <p>Les feuillets de renseignements fiscaux (T4A (P), T4A (SV) et NR4) vous  permettent de vérifier et d&rsquo;imprimer les feuillets T4 des six dernières années  si vous avez reçu des prestations du RPC et de la SV. Grâce aux options d&rsquo;envoi  des feuillets de renseignements fiscaux, vous pouvez choisir de recevoir votre T4  par voie électronique ou par la poste. Vous pouvez choisir une autre option par  la suite et vérifier et imprimer vos T4.</p>
+          <p>Les feuillets de renseignements fiscaux (T4A (P), T4A (SV) et NR4) vous  permettent de vérifier et d&rsquo;imprimer les feuillets T4 des six dernières années  si vous avez reçu des prestations du RPC et de la SV. Grâce aux options d&rsquo;envoi  des feuillets de renseignements fiscaux, vous pouvez choisir de recevoir votre T4  par voie électronique ou par la poste. Vous pouvez choisir une autre option par  la suite pour vérifier et imprimer vos T4.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4-fr.html';" type="button" class="btn btn-default">Feuillet de renseignements fiscaux (T4A, NR4)</button></li>
          <li class="mrgn-bttm-sm"> <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing-fr.html';" type="button" class="btn btn-default">Les options d'expédition de mon feuillet de renseignements fiscaux</button></li>
@@ -362,7 +362,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
-            <h2 id="a1-4" class="mrgn-tp-0">Versements&nbsp;</h2>
+            <h2 id="a1-4" class="mrgn-tp-0">Paiement&nbsp;</h2>
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
